--- a/roles/user_managment/tasks/main.yml
+++ b/roles/user_managment/tasks/main.yml
@@ -10,3 +10,10 @@
     path: /etc/sudoers
     line: "{{ new_user }} ALL=(ALL) NOPASSWD: ALL"
     validate: visudo -cf %s
+
+- name: Создание нового SSH ключа для нового пользователя
+  user:
+    name: "{{ new_user }}"
+    generate_ssh_key: yes
+    ssh_key_bits: 4096
+    ssh_key_type: ed25519
