--- a/rolesoracle91.yml
+++ b/rolesoracle91.yml
@@ -12,6 +12,8 @@
     - user_management
     - software_installation
     - ssh_configuration
+    - nginx_installation
+    - web_page
 
   handlers:
     - name: Restart SSH service
