--- a/roles/web_page/tasks/main.yml
+++ b/roles/web_page/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Publish web page
-  copy:
+  template:
     src: index.html
     dest: /usr/share/nginx/html/index.html
   notify: Reload Nginx
