--- a/roles/nginx_installation/tasks/main.yml
+++ b/roles/nginx_installation/tasks/main.yml
@@ -25,7 +25,7 @@
       <title>Курс системное администрирование</title>
       </head>
       <body>
-      <h1>Практическое задание</h1>
+      <h1>Практическое задание lab2</h1>
       </body>
       </html>
     dest: /usr/share/nginx/html/index.html
